index.css
@font-face {
  font-family: 'Lato';
  src: url('./assets/fonts/Lato/Lato-Bold.ttf');
  font-weight: bold;
  font-style: normal;
}

@font-face {
  font-family: 'Lato';
  src: url('./assets/fonts/Lato/Lato-Regular.ttf');
  font-weight: normal;
  font-style: normal;
}

@font-face {
  font-family: 'Lato';
  src: url('./assets/fonts/Lato/Lato-Light.ttf');
  font-weight: lighter;
  font-style: normal;
}

html {
  font-size: 62.5%;
}

:root {
  --color-blue: hsl(214, 50%, 50%);
  --color-grey: hsl(213, 16%, 22%);
  --color-white: hsl(0, 0%, 100%);
  --color-green: #516B5E;
  --color-pink: #DD7F77;
  --color-beige: #F8F3DF;
  --color-diabled: #575654;
  --color-background: hsla(213, 16%, 22%, .75);
  --main-shadow: 0 0 1.5rem 0 var(--color-grey);
  --text-large: calc(var(--text-body) * 2.25);
  --text-medium: calc(var(--text-body) * 1.75);
  --text-small: calc(var(--text-body) * 1.375);
  --text-body: 1.6rem;
  --text-xs: 1.2rem;
}

html,
body {
  width: 100vw;
  height: 100%;
  margin: 0;
}

* {
  font-family: 'Lato', sans-serif;
  font-weight: normal;
}

h1,
h2,
h3,
p,
ul,
li {
  margin: 0;
  padding: 0;
  color: var(--color-grey);
}

h1 {
  font-weight: bold;
  font-size: var(--text-large);
  line-height: var(--text-large);
}

h2 {
  font-size: var(--text-medium);
  line-height: var(--text-medium);
  font-weight: bold;
  margin: 1.4rem 0;
}

h3 {
  font-size: var(--text-small);
  line-height: var(--text-small);
  font-weight: bold;
}

p {
  font-size: var(--text-body);
  line-height: var(--text-body);
}

p + p {
  margin: 1rem 0;
}

a {
  cursor: pointer;
  color: currentColor;
}

ul,
li {
  list-style: none;
  font-size: var(--text-body);
}

input:not([type="checkbox"]),
button,
progress {
  -webkit-appearance: none;
  appearance: none;
}

input,
button {
  transition: all .3s ease-in-out;
}

input:focus,
button:focus {
  transform: scale(1.1);
}

svg path {
  fill: currentColor;
}

/*-- Navagation Styles --*/
.side-nav {
  position: relative;
}

nav {
  position: fixed;
  width: 25rem;
  height: 100%;
  background: var(--color-white);
  top: 0;
  left: -25rem;
  z-index: 1;
  transition: all .3s ease-in-out;
}

.side-nav input[type="checkbox"] {
  opacity: 0;
  position: absolute;
  z-index: -9999;
}

.side-nav svg {
  width: 2.4rem;
  height: 2.4rem;
  transition: all .3s ease-in-out;
}

.side-nav label {
  position: fixed;
  top: 1rem;
  left: 0;
  padding: 1rem;
  background: linear-gradient(to bottom right,#F8F3DF 50%,#DD7F77 50%);
  color: var(--color-grey);
  opacity: .9;
  transition: all .3s ease-in-out;
  z-index: 1
}

.side-nav input:focus + label {
  outline: 3px solid var(--color-blue);
}

.side-nav input:checked + label {
  left: 25rem;
}

.side-nav input:checked + label svg {
  transform: rotate(90deg);
}

.side-nav input:checked ~ nav {
  left: 0;
}

.side-nav input:not(:checked) ~ nav a:focus {
  transform: translateX(25rem);
}

nav ul a {
  padding: 1.6rem;
  display: block;
  text-decoration: none;
  background: var(--color-white);
  transition: .3s all ease-in-out;
}

nav ul a:hover,
nav ul a:focus {
  background: #dfdfdf;
}

nav li > ul a {
  padding-left: 3rem;
}

nav li > ul a:hover,
nav li > ul a:focus {
  background: #efefef;
}

/*-- Media Items --*/
.media-items {
  padding: 2.6rem 1.6rem;
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  justify-content: space-around;
  box-sizing: border-box;
  background: linear-gradient(to bottom right,#516B5E,#367588);
}

.media-items h1 {
  width: 100%;
  text-align: center;
  color: var(--color-white);
}

.media-items article {
  position: relative;
  max-width: 40rem;
  max-height: 25rem;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  overflow: hidden;
  margin: 1.6rem;
  transition: all .3s ease-in-out;
}

.media-items img {
  width: 100%;
}

.media-items a {
  position: absolute;
  text-align: center;
  padding: 1.6rem;
  box-sizing: border-box;
  top: 0;
  left: 0;
  bottom: 0;
  right: 0;
  display: flex;
  flex-direction: column;
  justify-content: center;
  background: linear-gradient(to bottom right,hsla(0, 0%, 100%, .5),hsla(214, 50%, 50%, .5));
  backdrop-filter: blur(0);
  -webkit-backdrop-filter: blur(0);
  opacity: 0;
  transition: all .3s ease-in-out;
  text-decoration: none;
}

.media-items article:hover,
.media-items article:active {
  box-shadow: var(--main-shadow);
  transform: translateY(-5px);
}

.media-items article:hover > a,
.media-items article:active > a,
.media-items a:focus {
  backdrop-filter: blur(5px);
  -webkit-backdrop-filter: blur(5px);
  opacity: 1;
}

/*-- Login -- */
#login {
  position: fixed;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  display: none;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  background: rgba(255, 255, 255, 0.2);
  z-index: 2;
}

#login:target {
  display: flex;
}

form[name="login"] {
  position: relative;
  display: flex;
  flex-direction: column;
  width: 100%;
  max-width: 30rem;
  padding: 1.6rem;
  box-sizing: border-box;
  background: linear-gradient(to bottom right,hsla(213, 16%, 2%, .85),hsla(213, 16%, 22%, .85));
  color: var(--color-white);
  backdrop-filter: blur(5px);
  -webkit-backdrop-filter: blur(5px);
}

form[name="login"] h2 {
  color: currentColor;
  text-transform: uppercase;
  position: relative;
}

form[name="login"] h2::after {
  content: '';
  width: 2rem;
  height: 2px;
  position: absolute;
  bottom: -.5rem;
  left: 0;
  background: var(--color-blue);
}

form[name="login"] > label,
form[name="login"] > a,
form[name="login"] > button,
form[name="login"] > input {
  text-transform: capitalize;
  padding: .65rem;
  font-size: var(--text-body);
}

form[name="login"] > label {
  padding-top: 0;
  padding-right: 0;
}

form[name="login"] > input,
form[name="login"] > button {
  background: #6A7591;
  color: inherit;
  border: 0;
  border-radius: .25rem;
  margin: 0 0 1rem 0;
}

label[for*="stay-logged"] {
  display: flex;
  align-items: center;
  cursor: pointer;
}

label[for*="stay-logged"] > input {
  opacity: 0;
  z-index: -9999;
  position: absolute;
}

label[for*="stay-logged"] > input + span {
  display:inline-block;
  width:var(--text-body);
  height:var(--text-body);
  margin-right: 1rem;
  background: #6A7591;
  opacity: .5;
  border-radius: .25rem;
  cursor: pointer;
  transition: all .3s ease-in-out;
}

label[for*="stay-logged"] > input + span::before {
  content: '✔';
  font-size: var(--text-small);
  color: var(--color-beige);
  position: relative;
  top: -9px;
  left: 4px;
  opacity: 0;
  transition: all .3s ease-in-out;
}

label[for*="stay-logged"] > input:checked + span::before,
label[for*="stay-logged"] > input:checked + span {
  opacity: 1;
}

label[for*="stay-logged"] > input:focus + span {
  outline: 3px solid var(--color-blue);
}

form[name="login"] > button {
  background: var(--color-blue);
  text-transform: uppercase;
  font-weight: bold;
  font-size: var(--text-body);
  margin: 2rem 0 0 0;
}

form[name="login"] > button[name="close-login"] {
  position: absolute;
  top: 1rem;
  right: 1rem;
  background: none;
  border-radius: 50%;
  margin: 0;
  z-index: +1;
}

form[name="login"] > button[name="close-login"]:hover,
form[name="login"] > button[name="close-login"]:active,
form[name="login"] > button[name="close-login"]:focus {
  background: var(--color-blue);
}

form[name="login"]:invalid button[type="submit"] {
  background: var(--color-diabled);
}

form[name="login"] input:not([type="checkbox"]) {
  border: 2px solid;
}

form[name="login"]:invalid input:not([type="checkbox"]) {
  border-color: var(--color-pink);
}

form[name="login"] input:not([type="checkbox"]):valid {
  border-color: var(--color-green);
}

form[name="login"]:valid {
  background: linear-gradient(to bottom right,hsla(150, 14%, 32%, .85),hsla(213, 16%, 22%, .85));
}

